@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2023 Aklivity Inc
+ * Copyright 2021-2024 Aklivity Inc
  *
  * Licensed under the Aklivity Community License (the "License"); you may not use
  * this file except in compliance with the License.  You may obtain a copy of the
@@ -14,7 +14,15 @@
  */
 package io.aklivity.zilla.runtime.binding.risingwave.internal.statement;
 
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
+import io.aklivity.zilla.runtime.binding.pgsql.parser.model.Stream;
+import io.aklivity.zilla.runtime.binding.pgsql.parser.model.Table;
+import io.aklivity.zilla.runtime.binding.pgsql.parser.model.TableColumn;
 
 public class RisingwaveCreateSourceTemplate extends RisingwaveCommandTemplate
 {
@@ -46,16 +54,19 @@ public class RisingwaveCreateSourceTemplate extends RisingwaveCommandTemplate
 
     public String generateStreamSource(
         String database,
-        RisingwaveCreateTableCommand command)
+        Stream stream)
     {
-        String table = command.createTable.getTable().getName();
+        String table = stream.name();
 
         includeBuilder.setLength(0);
-        final Map<String, String> includes = command.includes;
-        if (includes != null && !includes.isEmpty())
+        Map<String, String> includes = stream.columns().entrySet().stream()
+            .filter(e -> ZILLA_MAPPINGS.containsKey(e.getKey()))
+            .collect(LinkedHashMap::new, (m, e) -> m.put(e.getKey(), e.getValue()), Map::putAll);
+
+        if (!includes.isEmpty())
         {
             includeBuilder.append("\n");
-            includes.forEach((k, v) -> includeBuilder.append(String.format(ZILLA_MAPPINGS.get(k), v)));
+            includes.forEach((k, v) -> includeBuilder.append(String.format(ZILLA_MAPPINGS.get(k), k)));
             includeBuilder.delete(includeBuilder.length() - 1, includeBuilder.length());
         }
 
@@ -64,27 +75,30 @@ public class RisingwaveCreateSourceTemplate extends RisingwaveCommandTemplate
 
     public String generateTableSource(
         String database,
-        RisingwaveCreateTableCommand command)
+        Table tableInfo)
     {
-        String table = command.createTable.getTable().getName();
+        String table = tableInfo.name();
         String sourceName = "%s_source".formatted(table);
 
         includeBuilder.setLength(0);
-        final Map<String, String> includes = command.includes;
-        if (includes != null && !includes.isEmpty())
+        List<TableColumn> includes = tableInfo.columns().stream()
+            .filter(c -> ZILLA_MAPPINGS.containsKey(c.name()))
+            .collect(Collectors.toCollection(ArrayList::new));
+
+        if (!includes.isEmpty())
         {
             includeBuilder.append("\n");
-            includes.forEach((k, v) ->
+            includes.forEach(c ->
             {
-                if ("timestamp".equals(k))
+                String name = c.name();
+                if (ZILLA_TIMESTAMP.equals(name))
                 {
-                    includeBuilder.append(String.format(ZILLA_MAPPINGS.get(k), v));
+                    includeBuilder.append(String.format(ZILLA_MAPPINGS.get(name), "%s_timestamp".formatted(name)));
                 }
                 else
                 {
-                    includeBuilder.append(String.format(ZILLA_MAPPINGS.get(k), "zilla_%s_header".formatted(v)));
+                    includeBuilder.append(String.format(ZILLA_MAPPINGS.get(name), "%s_header".formatted(name)));
                 }
-
             });
             includeBuilder.delete(includeBuilder.length() - 1, includeBuilder.length());
         }
